feat(graph,scripting): add reference resolution strategies and file utility script methods